--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <h1>UnblockZone</h1>
     <p>Here all available games:</p>
     <ul>
-        <li><a href="Planet Shooter.html">Subway Surfers1</a></li>
+        <li><a href="Planet Shooter.html">Planet Shooter</a></li>
     </ul>
 </body>
 </html>
