Add Banana Game
the decision to add a "Banana"-clone is final, but the game will  probably get updated soon

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <h1>UnblockZone</h1>
     <p>Here all available games:</p>
     <ul>
-        <li><a href="Planet Shooter.html">Planet Shooter</a></li>
+        <li><a href="Banana/index.html">Banana</a></li>
     </ul>
 </body>
 </html>
