--- a/index.html
+++ b/index.html
@@ -45,7 +45,18 @@
     <p>Here all available games:</p>
     <ul>
         <li><a href="Banana/index.html">Banana</a></li>
+        <li><a href="2048-Game-main/index.html">2048</a></li>
+        <li><a href="Offline-HTML-Games-main/Games/brick-breaker.html">Brick Breaker</a></li>
+        <li><a href="Offline-HTML-Games-main/Games/Connect the Pipes.html">Connect the Pipes</a></li>
+        <li><a href="Offline-HTML-Games-main/Games/HTML Tower Defence.html">HTML Tower Defence</a></li>
+        <li><a href="Offline-HTML-Games-main/Games/maze.html">Maze</a></li>
+        <li><a href="Offline-HTML-Games-main/Games/mini_car_game.html">Mini car game</a></li>
+        <li><a href="Offline-HTML-Games-main/Games/slopeoffline.html">Slope</a></li>
+        <li><a href="Offline-HTML-Games-main/Games/Snakegame.html">Snake</a></li>
+        <li><a href="Offline-HTML-Games-main/Games/tetris.html">Tetris</a></li>
+        <li><a href="Offline-HTML-Games-main/Games/tic-tac-toe.html">Tic Tac Toe (2 Player)</a></li>
     </ul>
+    <p>credits coming soon&trade;</p>
 </body>
 </html>
 
