--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             text-align: center;
             background-color: #f9f9f9;
-            margin: 0;
+            margin: 20;
             padding: 0;
         }
         h1 {
@@ -95,13 +95,18 @@
             <img src="thumbnails/TicTacToe.png" alt="Tic Tac Toe Thumbnail">
             Tic Tac Toe (2 Player)
         </a>
+        <a class="game" href="off-the-line/index.html">
+            <img src="thumbnails/off-the-line.png" alt="off the line Thumbnail">
+            off the line
+        </a>
     </div>
     
     <br>
-    <p>credits: <a href="https://github.com/oldj/html5-tower-defense">oldj/html5 tower defense</a>,
-    <a href="https://github.com/Dystopia-user181/connect-pipes-polygonal">Dyst opia user181/connect pipes polygonal</a>,
-    <a href="https://github.com/Metroxe/one-html-page-challenge">Metroxe/one html page challenge</a>,
-    <a href="https://github.com/ImKennyYip/2048">ImKennyYip/2048</a>
+    <p>credits: <a href="https://github.com/oldj/html5-tower-defense">oldj</a>,
+    <a href="https://github.com/Dystopia-user181/connect-pipes-polygonal">Dyst opia user181</a>,
+    <a href="https://github.com/Metroxe/one-html-page-challenge">One html page challenge</a>,
+    <a href="https://github.com/ImKennyYip/2048">ImKennyYip</a>
+    <a href="https://github.com/js13kGames/off-the-line">js13kGames</a>
     </p>
 </body>
 </html>
