--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
             </div>
         </a>
         <a class="ad-window">
-            <img src="https://placehold.jp/3d4070/ffffff/250x250.png?text=a%20ad%20might%20be%20here%20soon"/>
+            <iframe data-aa='2372675' src='//ad.a-ads.com/2372675?size=250x250' style='width:250px; height:250px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
+            
         </a>
         <a class="game" href="Offline-HTML-Games-main/Games/slopeoffline.html">
             <img src="thumbnails/Slope.png" alt="Slope Thumbnail">
