add funny button

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
     <br>
     <a href="mailto:unblockzone@proton.me" class="email-button">Contact via E-mail <ion-icon name="mail-outline"></ion-icon></a>
-
+    <a href="https://mega.nz/folder/tyR3HYjR#ZCkbcBKTm59eQJIk6vLYKA" class="email-button" target="_blank">Click HERE for 1+ TB of anime</a>
 
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
