--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
             margin-left: 8px;
         }
 
+        .mobile-badge {
+            background-color: green;
+            color: white;
+            padding: 1px 3px;
+            text-align: center;
+            border-radius: 5px;
+            margin-left: 8px;
+        }
+        
         a:hover {
             background-color: #4CAF50;
             color: white;
@@ -82,8 +91,8 @@
         .email-button {
             display: inline-block;
             padding: 10px 20px;
-            background-color: #4CAF50; /* Grüner Hintergrund */
-            color: white; /* Weiße Schrift */
+            background-color: #4CAF50;
+            color: white; 
             text-align: center;
             text-decoration: none;
             border-radius: 5px;
@@ -108,6 +117,8 @@
             <div class="game-info">
                 <span>Banana</span>
                 <span class="homemade-badge"><ion-icon name="home"></ion-icon></span>
+                <!-- experiment, i coded this shit on mobile -->
+                <span class="mobile-badge"><ion-icon name="phone-portrait"></ion-icon></span>
             </div>
         </a>
         <a class="game" href="2048-Game-main/index.html">
