--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
             <div class="game-info">
                 <span>clumsy-bird</span>
                 <span class="new-badge"><ion-icon name="flame"></ion-icon></span>
+                <span class="mobile-badge"><ion-icon name="phone-portrait"></ion-icon></span>
             </div>
         </a>
         <a class="ad-window">
@@ -172,6 +173,7 @@
             <img src="thumbnails/MiniCarGame.png" alt="Mini Car Game Thumbnail">
             <div class="game-info">
                 <span>Mini car game</span>
+                <span class="mobile-badge"><ion-icon name="phone-portrait"></ion-icon></span>
             </div>
         </a>
         <a class="game" href="Offline-HTML-Games-main/Games/Snakegame.html">
@@ -190,12 +192,14 @@
             <img src="thumbnails/TicTacToe.png" alt="Tic Tac Toe Thumbnail">
             <div class="game-info">
                 <span>Tic Tac Toe (2 Player)</span>
+                <span class="mobile-badge"><ion-icon name="phone-portrait"></ion-icon></span>
             </div>
         </a>
         <a class="game" href="off-the-line/index.html">
             <img src="thumbnails/off-the-line.png" alt="off the line Thumbnail">
             <div class="game-info">
                 <span>off the line</span>
+                <!-- mobile-badge might be missing here -->
             </div>
         </a>
     </div>
