mobile-badges flr all compatible games

--- a/index.html
+++ b/index.html
@@ -149,12 +149,14 @@
             <img src="thumbnails/brick-breaker.png" alt="Brick Breaker Thumbnail">
             <div class="game-info">
                 <span>Brick Breaker</span>
+                <span class="mobile-badge"><ion-icon name="phone-portrait"></ion-icon></span>
             </div>
         </a>
         <a class="game" href="Offline-HTML-Games-main/Games/Connect the Pipes.html">
             <img src="thumbnails/ConnectThePipes.png" alt="Connect the Pipes Thumbnail">
             <div class="game-info">
                 <span>Connect the Pipes</span>
+                <span class="mobile-badge"><ion-icon name="phone-portrait"></ion-icon></span>
             </div>
         </a>
         <a class="game" href="Offline-HTML-Games-main/Games/HTML Tower Defence.html">
@@ -199,7 +201,8 @@
             <img src="thumbnails/off-the-line.png" alt="off the line Thumbnail">
             <div class="game-info">
                 <span>off the line</span>
-                <!-- mobile-badge might be missing here -->
+                <!-- mobile is kinda buggy -->
+                <span class="mobile-badge"><ion-icon name="phone-portrait"></ion-icon></span>
             </div>
         </a>
     </div>
